# Flamingo

./: .gitignore  README.md  main.py  pyproject.toml
Assistant Modules/: alarm.py  lights.py  timer.py  weather.py
Assistant_Brain/: interpret_speech.py  speech_recognition.py
Assistant_Brain/models/: info.txt
Assistant_Modules/: alarm.py  lights.py  weather.py
files/audio/alarm/: zachary_default_alarm.m4a
files/audio/assistant_sfx/: activate.m4a  deactivate.m4a  processing_request.m4a
