[tool.poetry]
name = "flamingo"
version = "0.1.0"
description = "Open-sourced, privacy-oriented smart home and technology hub"
authors = ["Zachary Nawrocki <zacknawrocki@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
playsound = "^1.3.0"
python-kasa = "^0.4.1"
vosk = "^0.3.32"
sounddevice = "^0.4.4"
pyobjc = "^8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
